Fix Avatar size on mobile

--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -64,3 +64,7 @@ nav > ul {
   width: 1.5rem;
   margin: 0 0.8rem;
 }
+
+.avatar {
+  width: 100%;
+}
